Always hide header, align error messages (bug 1057632)

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -186,6 +186,10 @@ section {
   to { transform: rotate(1turn); }
 }
 
-footer, #lightbox {
+header, footer, #lightbox {
   display: none;
+}
+
+.detailed-errors {
+  text-align: center;
 }
